--- a/public/css/mundialis.css
+++ b/public/css/mundialis.css
@@ -174,6 +174,14 @@ main > .row {
     padding: 10px 20px;
 }
 
+.timeline-section-left {
+    border-width: 0 10px 0 0 !important;
+}
+
+.timeline-section-right {
+    border-width: 0 0 0 0 !important;
+}
+
 @media (max-width: 767px) {
 	.site-mobile-header {
 		top: 54px !important;
@@ -265,6 +273,9 @@ main > .row {
 	.site-footer .navbar .navbar-nav {
 		flex-wrap: wrap; justify-content: center;
 	}
+    .timeline-section-right {
+        border-width: 0 10px 0 0 !important;
+    }
 }
 
 /* Footer */
